# Setlone-Wallet

./: .all-contributorsrc  16KB_ADDITIONAL_SETTINGS.md  16KB_FIX_APPLIED.md  16KB_PAGE_SIZE_WARNING.md  AGP_UPDATE_PLAN.md  ANDROID_STUDIO_SETUP.md  BEAGLE_REMOVAL_GUIDE.md  BEAGLE_REMOVAL_SOLUTION.md  BUILD_APK_GUIDE.md  BUILD_ERROR_LOG.md  BUILD_VARIANT_GUIDE.md  CRASH_ANALYSIS.md  LICENSE  LOGCAT_FILTER_GUIDE.md  LOGCAT_GUIDE.md  PERMISSION_REVIEW.md  README.md  TRON_NETWORK_IMPLEMENTATION.md  UPDATE_SUMMARY.md  WEBVIEW_MEMORY_OPTIMIZATION.md  build.gradle  build_check_log.txt  build_error_log.txt  build_log.txt  check_16kb_alignment.ps1  package.json  settings.gradle
app/: README.md  build.gradle  google-services.json  proguard-android-optimize.txt  proguard-rules.pro  theming.md
app/check/: detekt-baseline.xml  lint-baseline.xml
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dapps_list.json  privacyPolicy.html  termsOfService.html  tokenscript_explaination.html
app/src/main/cpp/: CMakeLists.txt  keys.c
dmz/: build.gradle
docs/: test.md
fastlane/: Screengrabfile
fastlane/metadata/android/en-US/: full_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hardware_stub/: build.gradle
lib/: LICENSE  README.md  build.gradle
lib/src/test/ts/: DAI.tsml  EntryToken-duplicate-Values.tsml  EntryToken-future-cert-self-signed.tsml  EntryToken-valid-RSA.tsml  EntryToken.tsml  entrytoken.canonicalized.xml  fifa.tsml
scripts/: release-github.sh
util/: build.gradle
(+1144 files in other folders)
